Fix display error on mobile of fluctuating rate

--- a/src/assets/scss/commons/common.scss
+++ b/src/assets/scss/commons/common.scss
@@ -3,8 +3,16 @@
     margin-left: 5px;
   }
 
+  &__mr5 {
+    margin-right: 7px;
+  }
+
+  &__mr7 {
+    margin-right: 7px;
+  }
+
   &__inline-block {
-    display: inline-block;
+    display: inline-block
   }
 
   &__text {
